update to background, update style

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:300|Saira:600&amp;subset=latin-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway|Sarala&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
-        <div class="background-layer">
-        </div>
+        <!--<div class="background-layer">
+        </div>-->
         <header>
             <nav>
                 <div class="menu-bar">
@@ -23,16 +23,18 @@
                     </ul>
                 </div>
             </nav>
-            <h1>This is a header</h1>
+            <a></a>
+            <h1>Planety jak&nbsp;na&nbsp;dłoni</h1>
+            <p>Zapraszamy na&nbsp;filmy o&nbsp;wszechświecie w&nbsp;kosmicznej jakości</p>
         </header>
         <main>
             <section>
-                <h2>Some info</h2>
+                <h2>Niebo dla najmłodszych</h2>
                 <div>
                     <article>
-                        <h3>Example one</h3>
+                        <h3>Dzieci Pana Astronoma</h3>
                         <p>
-                            Lucas ipsum dolor sit amet calrissian fett yoda watto r2-d2 hutt skywalker skywalker solo boba. Wedge moff yavin jabba. Wampa mara grievous moff. Hutt hutt lando anakin tusken raider. Grievous moff kenobi k-3po dooku ewok. Darth utapau darth windu windu darth wampa secura. Greedo moff hoth calrissian. Endor dooku darth hoth thrawn darth amidala mon yavin. Droid leia hutt fett palpatine leia. Grievous darth jawa sebulba darth. Fett wedge c-3po ackbar dagobah dagobah mon jawa binks. Mon solo ponda dantooine coruscant.
+                            Dzieci oglądają seans oparty na książce Wandy Chotomskiej pt. „Dzieci Pana Astronoma”, w którym zapoznajemy się z podstawowymi pojęciami, pokazujemy najbliższe planety. Ten pokaz to forma zabawy, która ma edukować w sposób przystępny i wesoły. Maluchy bardzo żywo reagują, czasem rodzice zabierają je na seanse dla dorosłych. I o dziwo są tak zafascynowane obrazami nieba, że potrafią wysiedzieć przez cały film.
                         </p>
                     </article>
                     <article>
@@ -41,33 +43,21 @@
                             Amidala leia mace jango anakin cade hutt. Leia moff ewok dooku. Darth qui-gon antilles ahsoka calrissian sidious antilles watto. Cade skywalker padmé endor. Obi-wan anakin moff secura hutt. Coruscant luke qui-gonn darth. Grievous droid antilles anakin skywalker tatooine endor jade gonk. Moff calrissian c-3p0 coruscant kenobi grievous anakin solo. C-3po leia hoth fett calamari. Sidious moff jade yoda calamari r2-d2 jinn luke. Jawa obi-wan ewok yoda skywalker calrissian solo mace. Zabrak sebulba ackbar mon zabrak windu grievous utapau boba.
                         </p>
                     </article>
-                    <article>
-                        <h3>Example three</h3>
-                        <p>
-                            Dantooine chewbacca c-3p0 k-3po hutt fett. Padmé wookiee mace leia boba endor moff. Kit dantooine luke gonk mon endor. Grievous mara lando vader qui-gon hutt fett fisto boba. Hutt hutt organa ben moff skywalker hutt. Coruscant maul boba skywalker obi-wan utapau skywalker chewbacca. Owen calamari skywalker calrissian dagobah calrissian obi-wan. Palpatine zabrak mustafar skywalker c-3p0 dagobah yoda jar. Lobot ben skywalker organa fett. Darth jinn moff organa coruscant. Darth darth tusken raider darth mon darth mandalorians wedge.
-                        </p>
-                    </article>
                 </div>
             </section>
             <section>
                 <h2>More info</h2>
                 <div>
                     <article>
-                        <h3>Example one</h3>
+                        <h3>Zjawa z Kosmosu</h3>
                         <p>
-                            Lucas ipsum dolor sit amet tc-14 mustafar psadan ubb darth gossam ozzel dug bothan thisspias. Nunb dorvalla himoran roan y'bith kwa vebb leia nas. Rattatak fisto isolder gungan ken jabba. Fisto arcona shmi jettster rukh lorth shmi zam sarn. Tund tund calrissian fosh. Lahara wilhuff rhen croke k-3po kohl hutta xexto subterrel. Zhell ord gora su. Wilhuff kurtzen sullustan thul drach'nam vestara golda. Qu pellaeon amanin troig mimbanite olié shmi aayla. H'nemthean tenel terentatek djo rishi. Calrissian tibor thul frozian maris dengar nas.
+                            Wczoraj w naszym planetarium po raz trzeci pokazaliśmy film pt. "Zjawa z Kosmosu". Opowiada on o jednej z najbardziej tajemniczych substancji we Wszechświecie - ciemnej materii. Naukowcy z całego świata szukają jej zarówno w Kosmosie, jak i na Ziemi. Ponieważ tematyka jest bardziej fizyczna niż astronomiczna, projekcje odbywają się na specjalną prośbę widzów.
                         </p>
                     </article>
                     <article>
-                        <h3>Example two</h3>
+                        <h3>Za gorąco? Zanurz się w wodzie...</h3>
                         <p>
                             Natasi boba vilim farlax subterrel charal su thrackan qui-gonn. Ev-9d9 chirrpa utapau ors. Phlog darpa boba fode polis muunilinst gwurran jarael. Jango luuke hapes tagge. Dulok boz argazdan md-5. Aurra axmis calamari anakin ventress c-3po epicanthix shado grodin. Endor kubaz jade trianii. Ablajeck xanatos jagged marek. Daala corran organa breha terrik. Boba sidious sikan whill var galen binks. Chiss kamino muzzer shmi dash greedo nadon. Bib karrde trianii yaka charal. Nosaurian cliegg abyssin felucia gand.
-                        </p>
-                    </article>
-                    <article>
-                        <h3>Example three</h3>
-                        <p>
-                            Iv darth givin coruscant malastare. Sarn ima-gun x1 luuke. Melodie aleena zekk toydarian rancisis. Sing bria derek braxant windu lah. Joh aruzan rieekan garindan. Borsk zorba monkey-lizard jaina moore falleen massans nadon. Fel cad jobal colton ulic jerjerrod frozian. Derek ailyn chewbacca dantari ailyn reach auril skywalker roonan. Solo tano yuuzhan kasan tusken raider skywalker tyber. Borvo boba cordé dulok aayla. Thistleborn lando farlax quermian wharl. Yuzzem naberrie whitesun obi-wan illum gank jobal.
                         </p>
                     </article>
                 </div>
@@ -85,12 +75,6 @@
                         <h3>Example two</h3>
                         <p>
                             Stereb lando rebo ziro wuher ventress greeata troig. Offee bith rakata momaw muun darth rune offee hutt. Tahiri max bail rishii iktotchi rom jobal jeremoch massassi. Shimrra winter leia huk windu nute logray borvo pau'an. Gotal jin'ha haruun felth. Snivvian keyan opress elom moff. Raa droopy zhell talortai hutta iridonian biggs bando. Ansionian bossk moore jeremoch habassa. Maul thakwaash celegian biggs brak zam chazrach seerdon kor-uj. Bibble luke lannik terrik kamino boss kessel verpine. Rakata quadrinaros maul hapan ponda togruta kitonak darth mothma.
-                        </p>
-                    </article>
-                    <article>
-                        <h3>Example three</h3>
-                        <p>
-                            Kal bren var bib teneniel finis thrawn dressellian qel-droma. Kor-uj klaatu gavyn malastare selkath freedon. Caedus boba kir raynar saché. Kal kenobi calrissian ithorian duros kiffar twi'lek troig bane. Glymphid teek terrik thistleborn chewbacca dantooine borsk pau'an. Wharl wilhuff anakin cathar kenobi cornelius kashyyyk darth. Vader wirutid yuzzum oola boba. Iv di tion feeorin stereb solo raioballo. Dantooine coruscant woostoid yuvernian vima-da-boda. Nomi shawda khai trioculus r2-d2. Muzzer himoran veila kashyyyk fisto barabel.
                         </p>
                     </article>
                 </div>
