add layer for bg pattern

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web:300&amp;subset=latin-ext" rel="stylesheet">
     </head>
     <body>
-        <!--<div class="background-layer">
-</div>-->
+        <div class="background-layer"></div>
         <header>
             <nav>
                 <div class="menu-bar">
