--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <div class="menu-bar">
                     <a href="#"></a>
                     <ul>
-                        <li><a href="#">Projekcje</a></li>
-                        <li><a href="#">Planetarium</a></li>
-                        <li><a href="#">O nas</a></li>
-                        <li><a href="#">Kontakt</a></li>
+                        <li><a href="#projekcje">Projekcje</a></li>
+                        <li><a href="#planetarium">Planetarium</a></li>
+                        <li><a href="#o-nas">O nas</a></li>
+                        <li><a href="#kontakt">Kontakt</a></li>
                     </ul>
                 </div>
             </nav>
@@ -27,7 +27,7 @@
             <p>Zapraszamy na&nbsp;filmy o&nbsp;wszechświecie w&nbsp;kosmicznej jakości</p>
         </header>
         <main>
-            <section>
+            <section id="projekcje">
                 <h2>Projekcje</h2>
                 <div>
                     <article>
@@ -99,7 +99,7 @@
                     </article>
                 </div>
             </section>
-            <section>
+            <section id="planetarium">
                 <h2>Planetarium</h2>
                 <div>
                     <article>
@@ -119,7 +119,7 @@
                     </article>
                 </div>
             </section>
-            <section>
+            <section id="o-nas">
                 <h2>O nas</h2>
                 <div>
                     <article>
@@ -140,6 +140,18 @@
             </section>
         </main>
         <footer>
+            <section id="kontakt">
+                <article>
+                    <h3>Skontaktuj się z nami</h3>
+                    <p>[formularz kontaktowy]</p>
+                </article>
+                <article>
+                    <h3>Nasz adres</h3>
+                    <p>Lorem ipsum Astrokino <br />
+                        Dolor sit amet 20 <br />
+                        44-444 Somewhere</p>
+                </article>
+            </section>
             <p>&copy; 2017 AstroKino</p>
         </footer>
     </body>
